--- a/CompSciClubGame/.classpath
+++ b/CompSciClubGame/.classpath
@@ -2,6 +2,90 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="source"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-assimp.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-assimp-javadoc.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-assimp-natives-windows.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-assimp-sources.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-bgfx.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-bgfx-javadoc.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-bgfx-natives-windows.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-bgfx-sources.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-egl.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-egl-javadoc.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-egl-sources.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-glfw.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-glfw-javadoc.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-glfw-natives-windows.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-glfw-sources.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-javadoc.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-jawt.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-jawt-javadoc.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-jawt-sources.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-jemalloc.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-jemalloc-javadoc.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-jemalloc-natives-windows.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-jemalloc-sources.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-lmdb.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-lmdb-javadoc.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-lmdb-natives-windows.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-lmdb-sources.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-nanovg.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-nanovg-javadoc.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-nanovg-natives-windows.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-nanovg-sources.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-natives-windows.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-nfd.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-nfd-javadoc.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-nfd-natives-windows.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-nfd-sources.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-nuklear.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-nuklear-javadoc.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-nuklear-natives-windows.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-nuklear-sources.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-openal.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-openal-javadoc.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-openal-natives-windows.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-openal-sources.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-opencl.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-opencl-javadoc.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-opencl-sources.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-opengl.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-opengles.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-opengles-javadoc.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-opengles-natives-windows.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-opengles-sources.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-opengl-javadoc.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-opengl-natives-windows.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-opengl-sources.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-ovr.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-ovr-javadoc.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-ovr-natives-windows.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-ovr-sources.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-par.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-par-javadoc.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-par-natives-windows.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-par-sources.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-sources.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-sse.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-sse-javadoc.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-sse-natives-windows.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-sse-sources.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-stb.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-stb-javadoc.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-stb-natives-windows.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-stb-sources.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-tinyfd.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-tinyfd-javadoc.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-tinyfd-natives-windows.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-tinyfd-sources.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-vulkan.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-vulkan-javadoc.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-vulkan-sources.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-xxhash.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-xxhash-javadoc.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-xxhash-natives-windows.jar"/>
+	<classpathentry kind="lib" path="Z:/lwjgl-release-3.1.1-custom/lwjgl-xxhash-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
